--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,18 @@
     stroke: #999
     Stroke-width: 1px;
  }
+
+
+ .gratBack {
+     fill: #D5E3ff;
+ }
+
+ .map {
+     border: medium solid #999;
+ }
+
+.title{
+    font-family: sans-serif;
+    font-size: 1.5 em;
+    font-weight: bold;
+}
